# dutrailpredictor

./: pyproject.toml  requirements.txt  streamlit_app.py
