[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fitparse>=1.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "streamlit>=1.58.0",
]

[tool.uv]
package = false
