[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fitparse>=1.2.0",
    "numpy>=2.5.1",
    "pandas>=3.0.5",
    "plotly>=6.9.0",
    "streamlit>=1.60.0",
]

[tool.uv]
package = false
